--- a/RegEx/README
+++ b/RegEx/README
@@ -1,1 +1,9 @@
 
+Sites utiles
+
+Test Regex
+https://regex101.com/
+
+Paterns courants
+https://code.tutsplus.com/tutorials/8-regular-expressions-you-should-know--net-6149
+https://projects.lukehaas.me/regexhub/
